--- a/_hearken--bbc.css
+++ b/_hearken--bbc.css
@@ -1,15 +1,3 @@
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font:inherit;font-size:100%;vertical-align:baseline}html{line-height:1}ol,ul{list-style:none}table{border-collapse:collapse;border-spacing:0}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}q,blockquote{quotes:none}q:before,q:after,blockquote:before,blockquote:after{content:"";content:none}a img{border:none}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary{display:block}textarea,input[type='text']{display:block;width:100%;-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;outline:none;font-family:'Helvetica Neue', helvetica, arial, sans-serif}input[type='submit'].btn{-webkit-appearance:none;-moz-appearance:none;appearance:none;border:none;outline:none;background:none;font-family:'Helvetica Neue', helvetica, arial, sans-serif}.embed-module-container,.body,.header,.footer,.curiosity-module{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;overflow:auto}textarea{box-sizing:border-box}.embed-module-container{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px;overflow:hidden}.embed-module-container .header,.embed-module-container .embed-module-header{font-weight:800;font-size:12px;color:#445566;text-align:center;color:white;background-color:#21bff3;padding:13px;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.embed-module-container .footer{padding:9px 12px 9px 12px;font-weight:400;font-size:10px;color:#97a3b1;line-height:1.3;text-align:right;background-color:#f3f4f7;font-size:9px}.embed-module-container .footer a{color:#21bff3}.embed-module-container .footer a:hover{color:#009bdc}html .embed-module-container{display:none}html.not-embedded .embed-module-container,html.embedded .embed-module-container{display:block}html.not-embedded .embed-module-container{max-width:450px;margin:0 auto}@media (min-width: 768px){html.not-embedded .curiosity-module .submission-form .asker-info>div{width:100%}}html,body{font-family:'Helvetica Neue', helvetica, arial, sans-serif;margin:0}.embed-module-body{font-weight:400;font-size:12px;color:#445566;background-color:#f3f4f7}.embed-module-body .body{padding:10px 9px 2px 9px}.embed-module-body .body.short-content{margin-bottom:50px}.embed-module-body h2{font-weight:800;font-size:12px;color:#445566;margin-left:12px;margin-bottom:7px}.embed-module-body p.small{margin-left:12px;margin-top:6px;margin-bottom:9px;color:#97a3b1;font-style:italic;font-size:10px}.embed-module-body textarea,.embed-module-body input[type=text]{-webkit-appearance:none;font-weight:400;font-size:12px;color:#445566;resize:vertical;line-height:1.4}.embed-module-body textarea{padding:8px 12px;-webkit-box-shadow:0 2px 0 0 #d7dbdf;-moz-box-shadow:0 2px 0 0 #d7dbdf;box-shadow:0 2px 0 0 #d7dbdf;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px;font-size:12px;min-height:87px;line-height:18px}.embed-module-body input[type=text]{padding:8px 12px}.embed-module-body .char-limit{margin-left:12px;color:#97a3b1;margin-top:5px}.embed-module-body .char-limit .warning{color:#d61000;font-weight:800}.embed-module-body .curiosity-module-body.no-character-limit .char-limit{display:none}.embed-module-body .checkbox{margin-left:9px;margin-top:8px;font-size:12px}.embed-module-body .checkbox label:hover,.embed-module-body .checkbox input:hover{cursor:pointer}.validation-error,.success-message{padding:9px 12px;margin-bottom:8px;line-height:1.4;display:none}.validation-error.show,.success-message.show{display:block}.validation-error{background-color:#ffd7d4;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px;-webkit-box-shadow:0 2px 0 0 #fbafaf;-moz-box-shadow:0 2px 0 0 #fbafaf;box-shadow:0 2px 0 0 #fbafaf;color:#d61000}.success-message{background-color:#c2f3c8;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px;-webkit-box-shadow:0 2px 0 0 #84d6a2;-moz-box-shadow:0 2px 0 0 #84d6a2;box-shadow:0 2px 0 0 #84d6a2;color:#109000}.ask-cloud{margin:0 0 20px 0}.asker-info{margin:12px 0}.field-group{-webkit-box-shadow:0 2px 0 0 #d7dbdf;-moz-box-shadow:0 2px 0 0 #d7dbdf;box-shadow:0 2px 0 0 #d7dbdf;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px;overflow:hidden}.field-group label{display:none}.field-group input[type=text]{border-bottom:2px solid #d7dbdf}.field-group div:last-child .control input[type=text]{border-bottom:none}.field-group.small input[type=text]{padding:6px 12px;font-size:10px}.actions{text-align:center;margin:16px 0 12px 0}input[type='submit'].btn{padding:9px 20px;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px;background-color:#21bff3;-webkit-box-shadow:0 2px 0 0 #009bdc;-moz-box-shadow:0 2px 0 0 #009bdc;box-shadow:0 2px 0 0 #009bdc;font-weight:800;font-size:12px;color:white;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}input[type='submit'].btn:hover{cursor:pointer;background-color:#009bdc;background-image:-webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #21bff3), color-stop(100%, #07ade4));background-image:-webkit-linear-gradient(#21bff3, #07ade4);background-image:-moz-linear-gradient(#21bff3, #07ade4);background-image:-o-linear-gradient(#21bff3, #07ade4);background-image:linear-gradient(#21bff3,#07ade4);-webkit-box-shadow:0 2px 0 0 #0183b9;-moz-box-shadow:0 2px 0 0 #0183b9;box-shadow:0 2px 0 0 #0183b9}.addthis_sharing_toolbox{height:35px}@media (min-width: 420px){.embed-module-container .embed-module-footer{padding:0 20px 9px 20px}.embed-module-body h1.prompt{padding:17px;font-size:15px}.embed-module-body .body{padding:20px 20px 2px 20px}.embed-module-body textarea,.embed-module-body input[type=text],.embed-module-body .field-group input[type=text]{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;padding:12px 12px;font-size:12px}.embed-module-body h2{font-size:15px}.embed-module-body p.small{font-size:12px}.field-group{-webkit-box-shadow:0 2px 0 0 #d7dbdf;-moz-box-shadow:0 2px 0 0 #d7dbdf;box-shadow:0 2px 0 0 #d7dbdf}.field-group label{display:none}.field-group input[type=text]{width:33.33333333%;clear:right;float:left;margin-left:0;margin-right:0%;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.field-group input[type=text]{border-bottom:none;border-right:2px solid #d7dbdf}.field-group div:last-child .control input[type=text]{border-right:none}}
-@font-face{font-family:'hearken-icons';src:url(//assets.wearehearken.com/production/assets/hearken-icons-d6518af02f0bac51e7ea97a92a6b77d1.eot);src:url(//assets.wearehearken.com/production/assets/hearken-icons-d6518af02f0bac51e7ea97a92a6b77d1.eot) format("embedded-opentype"),url(//assets.wearehearken.com/production/assets/hearken-icons-a396a03fe79cde5f8d28320a5a305075.ttf) format("truetype"),url(//assets.wearehearken.com/production/assets/hearken-icons-55e442009bfca028353fa40f91d9b662.woff) format("woff"),url(//assets.wearehearken.com/production/assets/hearken-icons-6fd4cc95d84ab28fbaa582ddc181932e.svg) format("svg");font-weight:normal;font-style:normal}html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font:inherit;font-size:100%;vertical-align:baseline}html{line-height:1}ol,ul{list-style:none}table{border-collapse:collapse;border-spacing:0}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}q,blockquote{quotes:none}q:before,q:after,blockquote:before,blockquote:after{content:"";content:none}a img{border:none}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary{display:block}html .embed-module-container{display:none}html.not-embedded .embed-module-container,html.embedded .embed-module-container{display:block}html.not-embedded .embed-module-container{max-width:450px;margin:0 auto}@media (min-width: 768px){html.not-embedded .curiosity-module .submission-form .asker-info>div{width:100%}}.prompt-intro+.voting-form{margin-top:10px}html,body{font-family:'Helvetica Neue', helvetica, arial, sans-serif}a{color:#21bff3}a:hover{color:#1da4d0}h2{color:#445566;font-size:14px;line-height:1.3;font-weight:bold}h2.center{text-align:center}h2+p{margin-top:10px}h2+.text-field{margin-top:8px}p{color:#445566;font-size:11px;line-height:1.3}em{font-weight:bold}.btn{-webkit-appearance:none;-moz-appearance:none;appearance:none;display:block;margin:2px auto;padding:9px 20px;border:0;background-color:#21bff3;box-shadow:0 2px 0 0 #009bdc;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px;font-family:'Helvetica Neue', helvetica, arial, sans-serif;font-size:12px;-webkit-font-smoothing:antialiased;font-weight:800;color:#FFFFFF}.btn:hover{background-color:#009bdc;cursor:pointer}.text-field{margin:5px 0;font-size:11px;color:#42238e;box-sizing:border-box;width:100%;padding:12px;border:0;background-color:white}.text-field:focus{outline:none}.question{display:block;overflow:hidden;*zoom:1;text-decoration:none;border-radius:3px;background-color:white;border-bottom:2px solid #d7dbdf;padding:20px 0;-webkit-transition:all 0.075s linear;-moz-transition:all 0.075s linear;-o-transition:all 0.075s linear;transition:all 0.075s linear}.question .voting-button{width:15%;display:block;float:left;-webkit-transition:all 0.075s linear;-moz-transition:all 0.075s linear;-o-transition:all 0.075s linear;transition:all 0.075s linear;text-align:center;font-family:'hearken-icons';color:#d7dbdf}.question .voting-button:after{content:"\e607"}.question .question-body{width:85%;display:block;float:left}.question .question-text{-webkit-transition:all 0.075s linear;-moz-transition:all 0.075s linear;-o-transition:all 0.075s linear;transition:all 0.075s linear;color:#445566;font-size:12px;font-weight:bold}.question .asker-name{font-size:10px;color:#97a3b1;margin-top:5px}.question+.question{margin-top:4px}.question:hover{border-color:#5bccf2}.question:hover .question-text{color:#21bff3}.question:hover .voting-button{transform:scale(1.4);color:#21bff3}.question:focus{background-color:#5bccf2;border-color:#5bccf2}.question:focus .question-text,.question:focus .asker-name,.question:focus .voting-button{color:white}.question:focus .voting-button{transform:scale(1.4)}.embed-module-container{background-color:#f3f4f7}.embed-module-body{padding:10px}.inset-body{padding:10px}.results-chart{margin:10px auto;font-size:11px;color:#445566}.results-chart .results-chart-question .percentage{text-align:right;color:#445566;font-weight:bold}.results-chart .results-chart-question.voted-for .status-bar{background-color:#c6e6f1}.results-chart .results-chart-question.voted-for .status-bar .status-bar-fill{background-color:#48aada}.results-chart .results-chart-question.voted-for .percentage{color:#48aada}.results-chart .results-chart-question.voted-for .label{color:#48aada}.results-chart .status-bar{position:relative;height:3px;width:100%;background-color:#AAB2C0;margin:4px 0 2px 0}.results-chart .status-bar .status-bar-fill{position:absolute;top:0;left:0;background-color:#445566;height:3px}.results-chart .label{white-space:nowrap;overflow-x:hidden;text-overflow:ellipsis;line-height:1.5;font-weight:bold;color:#445566}.results-chart .attribution{color:#97a3b1;font-size:10px;margin-top:2px}.collect-email{margin-top:25px}.share{margin-top:10px;padding:15px 0;text-align:center;background-color:#FFFFFF}.embed-module-header{text-align:center;color:white;background-color:#21bff3;padding:13px;font-size:12px;font-weight:bold}.footer{margin:0;padding:10px;text-align:right;color:#97a3b1;font-size:10px}
-
-body {
-    margin-top:  97px;
-}
-
-.asker-info div:nth-child(6)  {
-    display: none;
-    visibility: hidden;
-}
-
 .field-group input[type=text] {
   width: calc(50% - 2px) !important;
 }
@@ -26,7 +14,7 @@ body {
 
 .embed-module-body {
   background-color: #ededed !important;
-  padding:  0 !important;
+  margin-bottom: 44px;
 }
 
 ::-webkit-input-placeholder {
@@ -74,7 +62,6 @@ h2,
 .embed-module-body h2 {
   font-size: 16px !important;
   color: #404040 !important;
-  margin-bottom: 10px;
 }
 
 .embed-module-body p.small {
@@ -92,34 +79,23 @@ h2,
   border: 1px solid #bb1919;
 }
 
-.embed-module-body {}
+.embed-module-body {
+  padding: 16px !important;
+}
 
 .embed-module-body .body {
   padding: 0 !important;
-  border-radius: 0 !important;
 }
 
 .actions {
   margin: 0 !important;
 }
 
-.inset-body {
-  padding:  0px !important;
-}
-
+.inset-body,
 .embed-module-container {
   padding: 16px !important;
   background-color: #ededed !important;
-}
-
-.embed-module-container .embed-module-header {
-    display: none;
-    visibility: hidden;
-}
-
-.prompt-intro {
-    display: none;
-    visibility: hidden;
+  margin-bottom: 44px;
 }
 
 .question {
@@ -142,7 +118,6 @@ h2,
 
 .question + .question {
   margin-top: 8px !important;
-  border-radius: 0 !important;
 }
 
 .question .voting-button {
@@ -172,6 +147,10 @@ h2,
 
 .question:hover .voting-button {
   color: #fff !important;
+}
+
+input[type='submit'].btn {
+  margin-top: 16px !important;
 }
 
 .results-chart .label {
@@ -210,7 +189,6 @@ p {
 h2.center {
   text-align: left !important;
   font-size: 20px !important;
-  margin-left:  0;
 }
 
 .results-chart .results-chart-question .percentage {
@@ -220,15 +198,10 @@ h2.center {
 
 .question:hover .voting-button {
   color: #fff !important;
-  border-radius: 0 !important;
 }
 
 .voting-button {
   margin-top: 5px;
-}
-
-.prompt-intro+.voting-form {
-    margin-top: 0px;
 }
 
 .voting-form .question .voting-button:after {
@@ -265,7 +238,6 @@ h2.center {
 .embed-module-body input:hover,
 .embed-module-body .field-group input:hover {
   border: 1px solid #4ea6dd;
-  border-radius: 0 !important;
 }
 
 :focus {
@@ -289,11 +261,6 @@ h2.center {
 .embed-module-body textarea,
 .embed-module-body input[type=text] {
   color: #404040 !important;
-  border-radius: 0 !important;
-}
-
-.embed-module-container .embed-module-body .short-content{
-    margin-bottom:1px;
 }
 
 .embed-module-body .checkbox {
@@ -301,7 +268,7 @@ h2.center {
   color: #505050;
 }
 
-.embed-module-container .footer {
+.footer {
   text-align: left !important;
   font-size: 13px !important;
   line-height: 16px;
@@ -311,8 +278,6 @@ h2.center {
   padding-bottom: 0px !important;
   padding-left: 0px !important;
   padding-right: 0px !important;
-  background-color: #ededed;
-  border-radius: 0 !important;
 }
 
 a {
@@ -329,7 +294,7 @@ h2.heading {
 }
 
 .embed-module-body p.small {
-  margin-top: 2px !important;
+  margin-top: 0px !important;
 }
 
 .embed-module-body h2 {
@@ -343,23 +308,9 @@ h2.heading {
 .container {
   max-width: 592px;
   margin: 0 auto;
-  padding: 14px 16px 16px 16px !important;
-  border-radius: 0 !important;
-}
-
-html.not-embedded .embed-module-container {
-  box-sizing: border-box;
-  max-width:592px;
-}
-
-.collect-email-thank-you {
-  margin: 6px 0 8px 0;
-  font-size: 16px;
-  color: #040404;
 }
 
 .thank-you .footer {
-  border-radius: 0 !important;
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
