--- a/_hearken--bbc.css
+++ b/_hearken--bbc.css
@@ -224,6 +224,11 @@ h2.center {
     margin-top: 0px;
 }
 
+#question_custom_field_value {
+    display: none;
+    visibility: hidden;
+}
+
 .voting-form .question .voting-button:after {
   content: url(data:image/svg+xml,%3Csvg%20width%3D%2212%22%20height%3D%2214%22%20viewBox%3D%2296%200%2012%2014%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%3E%3Cpath%20fill%3D%22%23404040%22%20fill-rule%3D%22evenodd%22%20d%3D%22M107.375%207L96%200v3.15L102.388%207%2096%2010.85V14%22/%3E%3C/svg%3E);
   position: relative;
